--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title style="color: red;">date qualifier</title>
     <link rel="icon" type="image/x-icon" href="/image copy.png">
-    <link rel="stylesheet" href="/styles.css">
+    <link rel="stylesheet" href="/bahaar-chalogi/styles.css">
 </head>
 <body>
     <div id='bg'></div>
