--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title style="color: red;">date qualifier</title>
+    <title>bahaar chalogi?</title>
     <link rel="icon" type="image/x-icon" href="/image copy.png">
     <link rel="stylesheet" href="/bahaar-chalogi/styles.css">
 </head>
