--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>bahaar chalogi?</title>
-    <link rel="icon" type="image/x-icon" href="/image copy.png">
+    <link rel="icon" type="image/x-icon" href="/bahaar-chalogi/image copy.png">
     <link rel="stylesheet" href="/bahaar-chalogi/styles.css">
 </head>
 <body>
