--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     </svg>
 
     <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
-    <script src="/main.js"></script>
+    <script src="/bahaar-chalogi/main.js"></script>
 
 </body>
 </html>
