--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>bahaar chalogi?</title>
-    <link rel="icon" type="image/x-icon" href="/bahaar-chalogi/image copy.png">
-    <link rel="stylesheet" href="/bahaar-chalogi/styles.css">
+    <link rel="icon" type="image/x-icon" href="./image copy.png">
+    <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
     <div id='bg'></div>
@@ -51,7 +51,7 @@
     </svg>
 
     <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
-    <script src="/bahaar-chalogi/main.js"></script>
+    <script src="./main.js"></script>
 
 </body>
 </html>
