--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>bahaar chalogi?</title>
+    <title>date pe chalogi kya?</title>
     <link rel="icon" type="image/x-icon" href="./image copy.png">
     <link rel="stylesheet" href="./styles.css">
 </head>
